welcome.lessons.welcome.instructions.Instructions.scala.error
Program:2: error: not found: value marquer
marquer()
^Program:3: error: not found: value marquer
avance();marquer();avance();marquer();droite();avance();marquer();avance();marquer();droite();avance();marquer();avance();marquer();droite();avance();marquer();droite();avance();
         ^Program:3: error: not found: value marquer
avance();marquer();avance();marquer();droite();avance();marquer();avance();marquer();droite();avance();marquer();avance();marquer();droite();avance();marquer();droite();avance();
                            ^Program:3: error: not found: value marquer
avance();marquer();avance();marquer();droite();avance();marquer();avance();marquer();droite();avance();marquer();avance();marquer();droite();avance();marquer();droite();avance();
                                                        ^Program:3: error: not found: value marquer
avance();marquer();avance();marquer();droite();avance();marquer();avance();marquer();droite();avance();marquer();avance();marquer();droite();avance();marquer();droite();avance();
                                                                           ^Program:3: error: not found: value marquer
avance();marquer();avance();marquer();droite();avance();marquer();avance();marquer();droite();avance();marquer();avance();marquer();droite();avance();marquer();droite();avance();
                                                                                                       ^Program:3: error: not found: value marquer
avance();marquer();avance();marquer();droite();avance();marquer();avance();marquer();droite();avance();marquer();avance();marquer();droite();avance();marquer();droite();avance();
                                                                                                                          ^Program:3: error: not found: value marquer
avance();marquer();avance();marquer();droite();avance();marquer();avance();marquer();droite();avance();marquer();avance();marquer();droite();avance();marquer();droite();avance();
                                                                                                                                                      ^