welcome.lessons.welcome.instructions.Instructions.scala.code
marquer()
avance();marquer();avance();marquer();droite();avance();marquer();avance();marquer();droite();avance();marquer();avance();marquer();droite();avance();marquer();droite();avance();
